--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wacom Tablet/Pen Compatibility (Partial)</title>
+    <title>SevenPens Wacom Tablet/Pen Compatibility</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -67,7 +67,7 @@
     </style>
   </head>
   <body>
-    <h1>Wacom Compatibility Table</h1>
+    <h1>SevenPens Wacom Tablet/Pen Compatibility (Partial)</h1>
     
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
