Set 'Show names' checkbox to checked by default
The 'Show names' option in the controls section is now checked by default to improve user experience by making names visible on initial load.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
         <div id="options-area" style="display:none; margin-bottom: 5px;">
-            <input type="checkbox" id="show-names">
+            <input type="checkbox" id="show-names" checked>
             <label for="show-names" style="margin-right: 15px;">Show names</label>
             <input type="checkbox" id="one-per-line">
             <label for="one-per-line">One per line</label>
