Add view mode options for compatibility table
Introduces radio buttons to select different view modes: Compact Grouped, Group by tablet, Group by pen, and Ungrouped. Updates the table rendering logic to aggregate and display compatibility data according to the selected view mode, improving flexibility in how data is presented.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             <label for="show-names" style="margin-right: 15px;">Show names</label>
             <input type="checkbox" id="one-per-line">
             <label for="one-per-line">One per line</label>
+            <span style="margin-left: 15px; border-left: 1px solid #ccc; padding-left: 15px;">
+                <strong>View:</strong>
+                <input type="radio" id="view-grouped" name="view-mode" value="grouped" checked>
+                <label for="view-grouped">Compact Grouped</label>
+                <input type="radio" id="view-by-tablet" name="view-mode" value="by-tablet">
+                <label for="view-by-tablet">Group by tablet</label>
+                <input type="radio" id="view-by-pen" name="view-mode" value="by-pen">
+                <label for="view-by-pen">Group by pen</label>
+                <input type="radio" id="view-ungrouped" name="view-mode" value="ungrouped">
+                <label for="view-ungrouped">Ungrouped</label>
+            </span>
         </div>
         <div id="search-area" style="display:none; margin-top: 10px;">
             <input type="text" id="search-input" placeholder="Search devices..."
@@ -124,6 +135,9 @@
 
             showNamesCheckbox.addEventListener('change', renderTable);
             onePerLineCheckbox.addEventListener('change', renderTable);
+            document.querySelectorAll('input[name="view-mode"]').forEach(radio => {
+                radio.addEventListener('change', renderTable);
+            });
             searchInput.addEventListener('input', renderTable);
 
             // Try to fetch automatically
@@ -190,19 +204,92 @@
             function renderTable() {
                 const showNames = showNamesCheckbox.checked;
                 const onePerLine = onePerLineCheckbox.checked;
+                const viewMode = document.querySelector('input[name="view-mode"]:checked').value;
                 const searchTerm = searchInput.value.toLowerCase().trim();
+
                 tableBody.innerHTML = ''; // Clear existing
 
-                compatibilityRows.forEach(row => {
-                    const tabletNode = row.querySelector('tablet');
-                    const penNode = row.querySelector('pen');
+                // 1. Build List of Display Rows
+                let displayRows = [];
 
-                    const tablets = extractItems(tabletNode);
-                    const pens = extractItems(penNode);
+                if (viewMode === 'by-pen') {
+                    // Aggregate by Pen ID
+                    const penToTablets = new Map();
 
+                    compatibilityRows.forEach(row => {
+                        const tabletNode = row.querySelector('tablet');
+                        const penNode = row.querySelector('pen');
+                        const tablets = extractItems(tabletNode); // Raw IDs
+                        const pens = extractItems(penNode);       // Raw IDs
+
+                        pens.forEach(p => {
+                            if (!penToTablets.has(p)) penToTablets.set(p, new Set());
+                            tablets.forEach(t => penToTablets.get(p).add(t));
+                        });
+                    });
+
+                    // Create rows from map
+                    penToTablets.forEach((tabletSet, penId) => {
+                        const sortedPens = [penId]; // Single pen ID
+                        const sortedTablets = sortItems(Array.from(tabletSet), tabletDefs);
+                        displayRows.push({ tablets: sortedTablets, pens: sortedPens });
+                    });
+                    // Sort aggregation rows by the Pen
+                    displayRows.sort((a, b) => compareDeviceIds(a.pens[0], b.pens[0], penDefs));
+
+                } else if (viewMode === 'by-tablet') {
+                    // Aggregate by Tablet ID
+                    const tabletToPens = new Map();
+
+                    compatibilityRows.forEach(row => {
+                        const tabletNode = row.querySelector('tablet');
+                        const penNode = row.querySelector('pen');
+                        const tablets = extractItems(tabletNode);
+                        const pens = extractItems(penNode);
+
+                        tablets.forEach(t => {
+                            if (!tabletToPens.has(t)) tabletToPens.set(t, new Set());
+                            pens.forEach(p => tabletToPens.get(t).add(p));
+                        });
+                    });
+
+                    // Create rows from map
+                    tabletToPens.forEach((penSet, tabletId) => {
+                        const sortedTablets = [tabletId];
+                        const sortedPens = sortItems(Array.from(penSet), penDefs);
+                        displayRows.push({ tablets: sortedTablets, pens: sortedPens });
+                    });
+                    // Sort aggregation rows by the Tablet
+                    displayRows.sort((a, b) => compareDeviceIds(a.tablets[0], b.tablets[0], tabletDefs));
+
+                } else {
+                    // Grouped or Ungrouped (row-based processing)
+                    compatibilityRows.forEach(row => {
+                        const tabletNode = row.querySelector('tablet');
+                        const penNode = row.querySelector('pen');
+
+                        // Extract and Sort immediately
+                        const tablets = sortItems(extractItems(tabletNode), tabletDefs);
+                        const pens = sortItems(extractItems(penNode), penDefs);
+
+                        if (viewMode === 'grouped') {
+                            displayRows.push({ tablets, pens });
+                        } else {
+                            // Ungrouped: 1 Tablet x 1 Pen
+                            tablets.forEach(t => {
+                                pens.forEach(p => {
+                                    displayRows.push({ tablets: [t], pens: [p] });
+                                });
+                            });
+                        }
+                    });
+                }
+
+                // 2. Filter and Render
+                displayRows.forEach(row => {
                     // Filter Logic
                     if (searchTerm) {
-                        const allItems = [...tablets, ...pens];
+                        const allItems = [...row.tablets, ...row.pens];
                         const match = allItems.some(item => {
                             const id = item.toLowerCase();
                             let name = '';
@@ -214,17 +301,11 @@
                         if (!match) return; // Skip row if no match
                     }
 
-                    // Sort items
-                    const sortedTablets = sortItems(tablets, tabletDefs);
-                    const sortedPens = sortItems(pens, penDefs);
-
                     const tr = document.createElement('tr');
-
                     tr.innerHTML = `
-                        <td>${formatItems(sortedTablets, 'device-tag tablet', tabletDefs, showNames, onePerLine)}</td>
-                        <td>${formatItems(sortedPens, 'device-tag', penDefs, showNames, onePerLine)}</td>
+                        <td>${formatItems(row.tablets, 'device-tag tablet', tabletDefs, showNames, onePerLine)}</td>
+                        <td>${formatItems(row.pens, 'device-tag', penDefs, showNames, onePerLine)}</td>
                     `;
-
                     tableBody.appendChild(tr);
                 });
             }
@@ -246,6 +327,18 @@
                     }
                     return `<span class="${className}">${label}</span>`;
                 }).join(separator);
+            }
+
+            function compareDeviceIds(a, b, defsMap) {
+                const defA = defsMap.get(a) || { familyId: '', name: '' };
+                const defB = defsMap.get(b) || { familyId: '', name: '' };
+
+                if (defA.familyId < defB.familyId) return -1;
+                if (defA.familyId > defB.familyId) return 1;
+
+                if (a < b) return -1;
+                if (a > b) return 1;
+                return 0;
             }
 
             function sortItems(items, defsMap) {
