Move CSS to external stylesheet
Extracted inline CSS from index.html into a new style.css file and linked it in the HTML head for better maintainability and separation of concerns.

--- a/index.html
+++ b/index.html
@@ -5,77 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SevenPens Wacom Tablet/Pen Compatibility</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-
-        h1 {
-            color: #2c3e50;
-            text-align: center;
-        }
-
-        .controls {
-            margin-bottom: 20px;
-            padding: 15px;
-            background: #f8f9fa;
-            border-radius: 8px;
-            text-align: center;
-            border: 1px solid #e9ecef;
-        }
-
-        #error-msg {
-            color: #d32f2f;
-            margin-top: 10px;
-            display: none;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-
-        th,
-        td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #e0e0e0;
-            vertical-align: top;
-        }
-
-        th {
-            background-color: #f5f5f5;
-            font-weight: 600;
-            color: #555;
-            width: 50%;
-        }
-
-        tr:hover {
-            background-color: #fafafa;
-        }
-
-        .device-tag {
-            display: inline-block;
-            background: #e3f2fd;
-            color: #0d47a1;
-            padding: 2px 8px;
-            border-radius: 12px;
-            font-size: 0.9em;
-            margin: 2px;
-            white-space: nowrap;
-        }
-
-        .device-tag.tablet {
-            background: #e8f5e9;
-            color: #1b5e20;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
