Add row numbers, stats bar, and glob search to table
Enhanced the compatibility table with row numbering, a stats bar showing visible/total tablets and pens, and improved search functionality supporting quoted phrases and glob patterns. Also fixed tablet IDs for 2025 Intuos Pro models in the XML data.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
             <input type="text" id="search-input" placeholder="Search devices..."
                 style="width: 100%; max-width: 400px; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;">
         </div>
-        <p id="error-msg"></p>
+    </div>
+    <p id="error-msg"></p>
+    <div id="stats-bar" class="stats-bar">Loading stats...</div>
     </div>
 
     <table id="compat-table">
         <thead>
             <tr>
+                <th>#</th>
                 <th>Tablets</th>
                 <th>Pens</th>
             </tr>
