--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="controls">
         <p>Loading <code>wacom-pen-compat.xml</code>...</p>
         <div id="options-area" style="display:none; margin-bottom: 5px;">
-            <input type="checkbox" id="show-names" checked>
-            <label for="show-names" style="margin-right: 15px;">Show names</label>
+            <input type="checkbox" id="show-ids-only">
+            <label for="show-ids-only" style="margin-right: 15px;">Show ids only</label>
             <input type="checkbox" id="one-per-line">
             <label for="one-per-line">One per line</label>
             <label for="view-mode-select"
@@ -54,7 +54,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const tableBody = document.querySelector('#compat-table tbody');
-            const showNamesCheckbox = document.getElementById('show-names');
+            const showIdsOnlyCheckbox = document.getElementById('show-ids-only');
             const onePerLineCheckbox = document.getElementById('one-per-line');
             const searchInput = document.getElementById('search-input');
             const optionsArea = document.getElementById('options-area');
@@ -67,7 +67,7 @@
 
             const updateTable = () => renderCompatTable(tableBody, compatibilityRows, tabletDefs, penDefs);
 
-            showNamesCheckbox.addEventListener('change', updateTable);
+            showIdsOnlyCheckbox.addEventListener('change', updateTable);
             onePerLineCheckbox.addEventListener('change', updateTable);
             document.getElementById('view-mode-select').addEventListener('change', updateTable);
             searchInput.addEventListener('input', updateTable);
